--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>2.7.2</version>
+	    <type>jar</type>
+	    <scope>compile</scope>
+	</dependency>
   </dependencies>
 </project>
